--- a/app/src/main/res/layout/item_strategy_spit_bill_view.xml
+++ b/app/src/main/res/layout/item_strategy_spit_bill_view.xml
@@ -17,49 +17,57 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_1"
-            tools:text="ถ้าต้องใช้จ่าย 30,000 บาท โดยแบ่งจ่าย"
             android:textColor="@color/grayscale_dark_300"
             android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/tv_card_of_split_bill_first"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:lineHeight="20dp" />
+            app:layout_constraintVertical_chainStyle="spread_inside"
+            app:lineHeight="20dp"
+            tools:text="ถ้าต้องใช้จ่าย 30,000 บาท โดยแบ่งจ่าย" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_card_of_split_bill_first"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_1"
-            tools:text="บัตร Krungsri Now:\nแบ่งจ่ายยอดที่ 1: 6000 บาท ได้รับเครดิตเงินคืนเต็ม 300 บาท"
             android:textColor="@color/grayscale_dark_300"
             android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_card_of_split_bill_second"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_must_spend_split_bill"
-            app:lineHeight="20dp" />
+            app:lineHeight="20dp"
+            android:visibility="gone"
+            tools:text="บัตร Krungsri Now:\nแบ่งจ่ายยอดที่ 1: 6000 บาท ได้รับเครดิตเงินคืนเต็ม 300 บาท" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_card_of_split_bill_second"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_1"
-            tools:text="บัตร Krungsri Visa\nแบ่งจ่ายยอดที่ 2: 9000 บาท ได้รับเครดิตเงินคืนเต็ม 300 บาท"
             android:textColor="@color/grayscale_dark_300"
             android:textSize="16sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/tv_card_of_split_bill_third"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_card_of_split_bill_first"
-            app:lineHeight="20dp" />
+            app:lineHeight="20dp"
+            tools:text="บัตร Krungsri Visa\nแบ่งจ่ายยอดที่ 2: 9000 บาท ได้รับเครดิตเงินคืนเต็ม 300 บาท" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_card_of_split_bill_third"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_1"
-            tools:text="บัตร TTB So Smart:\nแบ่งจ่ายยอดที่ 3: 15000 บาท ได้รับเครดิตเงินคืน 150 บาท"
             android:textColor="@color/grayscale_dark_300"
             android:textSize="16sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/view_divider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_card_of_split_bill_second"
-            app:lineHeight="20dp" />
+            app:lineHeight="20dp"
+            tools:text="บัตร TTB So Smart:\nแบ่งจ่ายยอดที่ 3: 15000 บาท ได้รับเครดิตเงินคืน 150 บาท" />
 
         <View
             android:id="@+id/view_divider"
@@ -67,7 +75,9 @@
             android:layout_height="2dp"
             android:layout_margin="@dimen/space_1"
             android:background="@color/grayscale_light_300"
+            app:layout_constraintBottom_toTopOf="@+id/tv_balance_spend"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_card_of_split_bill_third" />
 
@@ -76,27 +86,48 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_1"
-            tools:text="เงินคงเหลือที่คาดว่าจะใช้จ่ายได้: 5000 บาท\nจากค่าใช้จ่ายย้อนหลังเดือนที่แล้ว"
             android:textColor="@color/grayscale_dark_300"
             android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/tv_card_of_balance_spend_first"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_divider"
-            app:lineHeight="20dp" />
+            app:lineHeight="20dp"
+            tools:text="เงินคงเหลือที่คาดว่าจะใช้จ่ายได้: 5000 บาท\nจากค่าใช้จ่ายย้อนหลังเดือนที่แล้ว" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_card_of_balance_spend_first"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_1"
-            tools:text="บัตร TTB So Fast: จะได้รับเครดิตเงินคืน 50 บาท"
             android:textColor="@color/grayscale_dark_300"
             android:textSize="16sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/tv_card_of_balance_spend_second"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_balance_spend"
-            app:lineHeight="20dp" />
+            app:lineHeight="20dp"
+            tools:text="บัตร TTB So Fast: จะได้รับเครดิตเงินคืน 50 บาท" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_card_of_balance_spend_second"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/space_1"
+            android:textColor="@color/grayscale_dark_300"
+            android:textSize="16sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/tv_total_cashback_of_month"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_of_balance_spend_first"
+            app:lineHeight="20dp"
+            tools:text="บัตร TTB So Fast: จะได้รับเครดิตเงินคืน 50 บาท" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_total_cashback_of_month"
@@ -104,14 +135,16 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_1"
             android:layout_marginTop="@dimen/space_2"
-            tools:text="ผลรวมเครดิตเงินคืนที่คาดว่าจะได้รับทั้งหมด: 800 บาท"
             android:textColor="@color/blue_dark_300"
             android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_of_balance_spend_first"
-            app:lineHeight="20dp" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_card_of_balance_spend_second"
+            app:lineHeight="20dp"
+            tools:text="ผลรวมเครดิตเงินคืนที่คาดว่าจะได้รับทั้งหมด: 800 บาท" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
