Fix Wording and Sort Section by user flow After Final Exam

--- a/app/src/main/res/layout/view_expense_last_month.xml
+++ b/app/src/main/res/layout/view_expense_last_month.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/tv_my_expense_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ค่าใช้จ่ายย้อนหลังเดือนที่แล้ว"
+                android:text="ค่าใช้จ่ายเฉลี่ยต่อเดือน"
                 android:textColor="@color/blue_dark_300"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_.5"
-                android:text="สามารถนำมาใช้ช่วยวางแผนกลยุทธ์ในการใช้บัตรเครดิตของท่านได้"
+                android:text="สามารถนำมาใช้ช่วยวางแผนในการใช้บัตรเครดิตของท่านได้"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_my_expense_title"
